[package]
name = "fluxmap"
version = "0.3.6"
edition = "2024"
authors = ["Abiru Ekanayaka <abiruekanayaka5@gmail.com>"]
description = "A thread-safe, transactional, and concurrent in-memory key-value store for Rust. Offers ACID guarantees with Serializable Snapshot Isolation (SSI) and optional durability via a Write-Ahead Log (WAL). Designed for ease of use, high performance, and modern async Rust."
license = "MIT"
repository = "https://github.com/AbiruEkanayaka/FluxMap"
readme = "README.md"
keywords = ["map", "skiplist", "lock-free", "mvcc", "wal"]
categories = ["algorithms", "concurrency", "data-structures", "database"]
documentation = "https://docs.rs/fluxmap"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"
dashmap = "6.1.0"
futures = "0.3"
fastrand = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
ciborium = "0.2.2"
log = "0.4.28"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.2", features = ["fs"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
rand = "0.9.2"
tempfile = "3.10"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "concurrent_quick_bench"
harness = false
